# Empire

./: .env.example  .flake8  .gitignore  01_introduction.md  02_overall_description.md  03_specific_requirements.md  04_v3_enhancements.md  05_v3_1_optimizations.md  06_v4_unified_architecture.md  07_performance_scaling.md  08_video_processing.md  09_orchestrator_requirements.md  10_appendices_a.md  10_n8n_orchestration.md  11_appendices_b.md  12_appendices_c.md  ASYNC_CREW_EXECUTION.md  B2_FOLDER_STRUCTURE.md  CLAUDE.md  DOCUMENT_PROCESSING_SERVICES.md  EMPIRE_v7_vs_TOTAL_RAG_GAP_ANALYSIS.md  OLLAMA_SETUP.md  PRE_DEV_CHECKLIST.md  README.md  REDIS_SETUP.md  RENDER_DEPLOYMENT.md  SETUP_STATUS.md  TASK_40_TEST_SUMMARY.md  TESTING.md  app_with_auth.py  chat_ui.py  claude.md  coverage.xml  credentials-to-remove.txt  docker-compose.monitoring.yml  docker-compose.yml  empire-arch.txt  project_chat_ui.py  pytest.ini  render.yaml  (+11 more)
.github/: DEPLOYMENT_GUIDE.md
.specify/: constitution.md
.taskmaster/: state.json
SRS/: 06_v4_unified_architecture.md  ai-empire-srs-v32-full.md  ai-empire-srs-v33-full.md  ai-empire-srs-v34-local-embeddings.md  srs_v27_empire.md  srs_v28_empire.md  updated_srs_parallel_processing.md
Workflows_Final/: INDEX.md  milestone_5_chat_ui.md  milestone_7_admin_tools.md  service_patterns.md
app/: celery_app.py  main.py
config/: services.yaml
crewai/: orchestrator_enhanced.py
docs/: AGENT_INTERACTIONS_ENHANCEMENTS.md  API_REFERENCE.md  (+29 more)
empire-desktop/src-tauri/: Cargo.toml  tauri.conf.json
empire-desktop/src-tauri/capabilities/: default.json
(+1410 files in other folders)
